[BL-168] /products/{productId} (GET) API
