# swagger/api.yaml
@@ -60,6 +60,30 @@ paths:
             $ref: '#/definitions/GetProductsResponse'
         400:
           description: Invalid input
+  /products/{productId}:
+    get:
+      tags:
+      - product
+      summary: "Find Product by ID"
+      description: "Returns a single Product"
+      operationId: "getProductById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "productId"
+        in: "path"
+        description: "ID of Product to return"
+        required: true
+        type: string
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/GetProductResponse"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Product not found"
   /products/hosts/{hostCode}/products/{productNo}:
     get:
       tags:
